# showfetch

./: CMakeLists.txt  LICENSE  README.md  install_manifest.txt
lib/: getLsbRelease.c  getUptime.c  icon.h  lsb_release.h  printIconRow.c  setIconCharacterRow.c  setIconColor.c  uptime.h
src/: main.c
